--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -102,3 +102,86 @@ button[data-start]:focus-visible {
   font-weight: 400;
   line-height: 1.5;
 }
+
+.form {
+  padding: 36px 156px;
+}
+
+.form>label {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  margin-bottom: 30px;
+}
+
+.form>label>input {
+  box-sizing: border-box;
+  width: 360px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #808080;
+}
+
+.form>label>input:hover {
+  border: 1px solid #000;
+}
+
+.form>label>input:focus,
+.form>label>input:focus-visible {
+  outline: 0;
+  border: 1px solid #4E75FF;
+}
+
+.form>fieldset {
+  box-sizing: border-box;
+  width: 360px;
+  height: 64px;
+  flex-shrink: 0;
+  display: flex;
+  align-items: flex-start;
+  gap: 48px;
+  justify-content: center;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin-left: 0;
+  margin-bottom: 24px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.form>fieldset:hover {
+  border: 1px solid #000;
+}
+
+.form>button {
+  display: flex;
+  width: 360px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  background: #4E75FF;
+  color: #FFF;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.0.4em;
+}
+
+.form>button:hover {
+  background: #6C8CFF;
+}
+
+.form>button:focus,
+.form>button:focus-visible {
+  outline: 0;
+}
